feature/GEINFRA-122: delete_user -> deleted_user
