# swagger_server/models/deleted_user.py
@@ -9,32 +9,32 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class DeleteUser(Model):
+class DeletedUser(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, id: str=None, username: str=None, email: str=None, msisdn: str=None, reason: str=None, created_at: datetime=None, updated_at: datetime=None, deleted_at: datetime=None, deleter_id: str=None):  # noqa: E501
-        """DeleteUser - a model defined in Swagger
+        """DeletedUser - a model defined in Swagger
 
-        :param id: The id of this DeleteUser.  # noqa: E501
+        :param id: The id of this DeletedUser.  # noqa: E501
         :type id: str
-        :param username: The username of this DeleteUser.  # noqa: E501
+        :param username: The username of this DeletedUser.  # noqa: E501
         :type username: str
-        :param email: The email of this DeleteUser.  # noqa: E501
+        :param email: The email of this DeletedUser.  # noqa: E501
         :type email: str
-        :param msisdn: The msisdn of this DeleteUser.  # noqa: E501
+        :param msisdn: The msisdn of this DeletedUser.  # noqa: E501
         :type msisdn: str
-        :param reason: The reason of this DeleteUser.  # noqa: E501
+        :param reason: The reason of this DeletedUser.  # noqa: E501
         :type reason: str
-        :param created_at: The created_at of this DeleteUser.  # noqa: E501
+        :param created_at: The created_at of this DeletedUser.  # noqa: E501
         :type created_at: datetime
-        :param updated_at: The updated_at of this DeleteUser.  # noqa: E501
+        :param updated_at: The updated_at of this DeletedUser.  # noqa: E501
         :type updated_at: datetime
-        :param deleted_at: The deleted_at of this DeleteUser.  # noqa: E501
+        :param deleted_at: The deleted_at of this DeletedUser.  # noqa: E501
         :type deleted_at: datetime
-        :param deleter_id: The deleter_id of this DeleteUser.  # noqa: E501
+        :param deleter_id: The deleter_id of this DeletedUser.  # noqa: E501
         :type deleter_id: str
         """
         self.swagger_types = {
@@ -72,32 +72,32 @@ class DeleteUser(Model):
         self._deleter_id = deleter_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DeleteUser':
+    def from_dict(cls, dikt) -> 'DeletedUser':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The delete_user of this DeleteUser.  # noqa: E501
-        :rtype: DeleteUser
+        :return: The deleted_user of this DeletedUser.  # noqa: E501
+        :rtype: DeletedUser
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def id(self) -> str:
-        """Gets the id of this DeleteUser.
+        """Gets the id of this DeletedUser.
 
 
-        :return: The id of this DeleteUser.
+        :return: The id of this DeletedUser.
         :rtype: str
         """
         return self._id
 
     @id.setter
     def id(self, id: str):
-        """Sets the id of this DeleteUser.
+        """Sets the id of this DeletedUser.
 
 
-        :param id: The id of this DeleteUser.
+        :param id: The id of this DeletedUser.
         :type id: str
         """
         if id is None:
@@ -107,20 +107,20 @@ class DeleteUser(Model):
 
     @property
     def username(self) -> str:
-        """Gets the username of this DeleteUser.
+        """Gets the username of this DeletedUser.
 
 
-        :return: The username of this DeleteUser.
+        :return: The username of this DeletedUser.
         :rtype: str
         """
         return self._username
 
     @username.setter
     def username(self, username: str):
-        """Sets the username of this DeleteUser.
+        """Sets the username of this DeletedUser.
 
 
-        :param username: The username of this DeleteUser.
+        :param username: The username of this DeletedUser.
         :type username: str
         """
         if username is None:
@@ -130,20 +130,20 @@ class DeleteUser(Model):
 
     @property
     def email(self) -> str:
-        """Gets the email of this DeleteUser.
+        """Gets the email of this DeletedUser.
 
 
-        :return: The email of this DeleteUser.
+        :return: The email of this DeletedUser.
         :rtype: str
         """
         return self._email
 
     @email.setter
     def email(self, email: str):
-        """Sets the email of this DeleteUser.
+        """Sets the email of this DeletedUser.
 
 
-        :param email: The email of this DeleteUser.
+        :param email: The email of this DeletedUser.
         :type email: str
         """
 
@@ -151,20 +151,20 @@ class DeleteUser(Model):
 
     @property
     def msisdn(self) -> str:
-        """Gets the msisdn of this DeleteUser.
+        """Gets the msisdn of this DeletedUser.
 
 
-        :return: The msisdn of this DeleteUser.
+        :return: The msisdn of this DeletedUser.
         :rtype: str
         """
         return self._msisdn
 
     @msisdn.setter
     def msisdn(self, msisdn: str):
-        """Sets the msisdn of this DeleteUser.
+        """Sets the msisdn of this DeletedUser.
 
 
-        :param msisdn: The msisdn of this DeleteUser.
+        :param msisdn: The msisdn of this DeletedUser.
         :type msisdn: str
         """
 
@@ -172,20 +172,20 @@ class DeleteUser(Model):
 
     @property
     def reason(self) -> str:
-        """Gets the reason of this DeleteUser.
+        """Gets the reason of this DeletedUser.
 
 
-        :return: The reason of this DeleteUser.
+        :return: The reason of this DeletedUser.
         :rtype: str
         """
         return self._reason
 
     @reason.setter
     def reason(self, reason: str):
-        """Sets the reason of this DeleteUser.
+        """Sets the reason of this DeletedUser.
 
 
-        :param reason: The reason of this DeleteUser.
+        :param reason: The reason of this DeletedUser.
         :type reason: str
         """
 
@@ -193,20 +193,20 @@ class DeleteUser(Model):
 
     @property
     def created_at(self) -> datetime:
-        """Gets the created_at of this DeleteUser.
+        """Gets the created_at of this DeletedUser.
 
 
-        :return: The created_at of this DeleteUser.
+        :return: The created_at of this DeletedUser.
         :rtype: datetime
         """
         return self._created_at
 
     @created_at.setter
     def created_at(self, created_at: datetime):
-        """Sets the created_at of this DeleteUser.
+        """Sets the created_at of this DeletedUser.
 
 
-        :param created_at: The created_at of this DeleteUser.
+        :param created_at: The created_at of this DeletedUser.
         :type created_at: datetime
         """
         if created_at is None:
@@ -216,20 +216,20 @@ class DeleteUser(Model):
 
     @property
     def updated_at(self) -> datetime:
-        """Gets the updated_at of this DeleteUser.
+        """Gets the updated_at of this DeletedUser.
 
 
-        :return: The updated_at of this DeleteUser.
+        :return: The updated_at of this DeletedUser.
         :rtype: datetime
         """
         return self._updated_at
 
     @updated_at.setter
     def updated_at(self, updated_at: datetime):
-        """Sets the updated_at of this DeleteUser.
+        """Sets the updated_at of this DeletedUser.
 
 
-        :param updated_at: The updated_at of this DeleteUser.
+        :param updated_at: The updated_at of this DeletedUser.
         :type updated_at: datetime
         """
         if updated_at is None:
@@ -239,20 +239,20 @@ class DeleteUser(Model):
 
     @property
     def deleted_at(self) -> datetime:
-        """Gets the deleted_at of this DeleteUser.
+        """Gets the deleted_at of this DeletedUser.
 
 
-        :return: The deleted_at of this DeleteUser.
+        :return: The deleted_at of this DeletedUser.
         :rtype: datetime
         """
         return self._deleted_at
 
     @deleted_at.setter
     def deleted_at(self, deleted_at: datetime):
-        """Sets the deleted_at of this DeleteUser.
+        """Sets the deleted_at of this DeletedUser.
 
 
-        :param deleted_at: The deleted_at of this DeleteUser.
+        :param deleted_at: The deleted_at of this DeletedUser.
         :type deleted_at: datetime
         """
 
@@ -260,20 +260,20 @@ class DeleteUser(Model):
 
     @property
     def deleter_id(self) -> str:
-        """Gets the deleter_id of this DeleteUser.
+        """Gets the deleter_id of this DeletedUser.
 
 
-        :return: The deleter_id of this DeleteUser.
+        :return: The deleter_id of this DeletedUser.
         :rtype: str
         """
         return self._deleter_id
 
     @deleter_id.setter
     def deleter_id(self, deleter_id: str):
-        """Sets the deleter_id of this DeleteUser.
+        """Sets the deleter_id of this DeletedUser.
 
 
-        :param deleter_id: The deleter_id of this DeleteUser.
+        :param deleter_id: The deleter_id of this DeletedUser.
         :type deleter_id: str
         """
         if deleter_id is None:
