# swagger_server/models/deleted_user_create.py
@@ -9,26 +9,26 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class DeleteUserCreate(Model):
+class DeletedUserCreate(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, id: str=None, username: str=None, email: str=None, msisdn: str=None, reason: str=None, deleter_id: str=None):  # noqa: E501
-        """DeleteUserCreate - a model defined in Swagger
+        """DeletedUserCreate - a model defined in Swagger
 
-        :param id: The id of this DeleteUserCreate.  # noqa: E501
+        :param id: The id of this DeletedUserCreate.  # noqa: E501
         :type id: str
-        :param username: The username of this DeleteUserCreate.  # noqa: E501
+        :param username: The username of this DeletedUserCreate.  # noqa: E501
         :type username: str
-        :param email: The email of this DeleteUserCreate.  # noqa: E501
+        :param email: The email of this DeletedUserCreate.  # noqa: E501
         :type email: str
-        :param msisdn: The msisdn of this DeleteUserCreate.  # noqa: E501
+        :param msisdn: The msisdn of this DeletedUserCreate.  # noqa: E501
         :type msisdn: str
-        :param reason: The reason of this DeleteUserCreate.  # noqa: E501
+        :param reason: The reason of this DeletedUserCreate.  # noqa: E501
         :type reason: str
-        :param deleter_id: The deleter_id of this DeleteUserCreate.  # noqa: E501
+        :param deleter_id: The deleter_id of this DeletedUserCreate.  # noqa: E501
         :type deleter_id: str
         """
         self.swagger_types = {
@@ -57,32 +57,32 @@ class DeleteUserCreate(Model):
         self._deleter_id = deleter_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DeleteUserCreate':
+    def from_dict(cls, dikt) -> 'DeletedUserCreate':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The delete_user_create of this DeleteUserCreate.  # noqa: E501
-        :rtype: DeleteUserCreate
+        :return: The deleted_user_create of this DeletedUserCreate.  # noqa: E501
+        :rtype: DeletedUserCreate
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def id(self) -> str:
-        """Gets the id of this DeleteUserCreate.
+        """Gets the id of this DeletedUserCreate.
 
 
-        :return: The id of this DeleteUserCreate.
+        :return: The id of this DeletedUserCreate.
         :rtype: str
         """
         return self._id
 
     @id.setter
     def id(self, id: str):
-        """Sets the id of this DeleteUserCreate.
+        """Sets the id of this DeletedUserCreate.
 
 
-        :param id: The id of this DeleteUserCreate.
+        :param id: The id of this DeletedUserCreate.
         :type id: str
         """
         if id is None:
@@ -92,20 +92,20 @@ class DeleteUserCreate(Model):
 
     @property
     def username(self) -> str:
-        """Gets the username of this DeleteUserCreate.
+        """Gets the username of this DeletedUserCreate.
 
 
-        :return: The username of this DeleteUserCreate.
+        :return: The username of this DeletedUserCreate.
         :rtype: str
         """
         return self._username
 
     @username.setter
     def username(self, username: str):
-        """Sets the username of this DeleteUserCreate.
+        """Sets the username of this DeletedUserCreate.
 
 
-        :param username: The username of this DeleteUserCreate.
+        :param username: The username of this DeletedUserCreate.
         :type username: str
         """
         if username is None:
@@ -115,20 +115,20 @@ class DeleteUserCreate(Model):
 
     @property
     def email(self) -> str:
-        """Gets the email of this DeleteUserCreate.
+        """Gets the email of this DeletedUserCreate.
 
 
-        :return: The email of this DeleteUserCreate.
+        :return: The email of this DeletedUserCreate.
         :rtype: str
         """
         return self._email
 
     @email.setter
     def email(self, email: str):
-        """Sets the email of this DeleteUserCreate.
+        """Sets the email of this DeletedUserCreate.
 
 
-        :param email: The email of this DeleteUserCreate.
+        :param email: The email of this DeletedUserCreate.
         :type email: str
         """
 
@@ -136,20 +136,20 @@ class DeleteUserCreate(Model):
 
     @property
     def msisdn(self) -> str:
-        """Gets the msisdn of this DeleteUserCreate.
+        """Gets the msisdn of this DeletedUserCreate.
 
 
-        :return: The msisdn of this DeleteUserCreate.
+        :return: The msisdn of this DeletedUserCreate.
         :rtype: str
         """
         return self._msisdn
 
     @msisdn.setter
     def msisdn(self, msisdn: str):
-        """Sets the msisdn of this DeleteUserCreate.
+        """Sets the msisdn of this DeletedUserCreate.
 
 
-        :param msisdn: The msisdn of this DeleteUserCreate.
+        :param msisdn: The msisdn of this DeletedUserCreate.
         :type msisdn: str
         """
 
@@ -157,20 +157,20 @@ class DeleteUserCreate(Model):
 
     @property
     def reason(self) -> str:
-        """Gets the reason of this DeleteUserCreate.
+        """Gets the reason of this DeletedUserCreate.
 
 
-        :return: The reason of this DeleteUserCreate.
+        :return: The reason of this DeletedUserCreate.
         :rtype: str
         """
         return self._reason
 
     @reason.setter
     def reason(self, reason: str):
-        """Sets the reason of this DeleteUserCreate.
+        """Sets the reason of this DeletedUserCreate.
 
 
-        :param reason: The reason of this DeleteUserCreate.
+        :param reason: The reason of this DeletedUserCreate.
         :type reason: str
         """
 
@@ -178,20 +178,20 @@ class DeleteUserCreate(Model):
 
     @property
     def deleter_id(self) -> str:
-        """Gets the deleter_id of this DeleteUserCreate.
+        """Gets the deleter_id of this DeletedUserCreate.
 
 
-        :return: The deleter_id of this DeleteUserCreate.
+        :return: The deleter_id of this DeletedUserCreate.
         :rtype: str
         """
         return self._deleter_id
 
     @deleter_id.setter
     def deleter_id(self, deleter_id: str):
-        """Sets the deleter_id of this DeleteUserCreate.
+        """Sets the deleter_id of this DeletedUserCreate.
 
 
-        :param deleter_id: The deleter_id of this DeleteUserCreate.
+        :param deleter_id: The deleter_id of this DeletedUserCreate.
         :type deleter_id: str
         """
         if deleter_id is None:
