# swagger_server/models/deleted_user_update.py
@@ -9,26 +9,26 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class DeleteUserUpdate(Model):
+class DeletedUserUpdate(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, username: str=None, email: str=None, msisdn: str=None, reason: str=None, deleted_at: datetime=None, deleter_id: str=None):  # noqa: E501
-        """DeleteUserUpdate - a model defined in Swagger
+        """DeletedUserUpdate - a model defined in Swagger
 
-        :param username: The username of this DeleteUserUpdate.  # noqa: E501
+        :param username: The username of this DeletedUserUpdate.  # noqa: E501
         :type username: str
-        :param email: The email of this DeleteUserUpdate.  # noqa: E501
+        :param email: The email of this DeletedUserUpdate.  # noqa: E501
         :type email: str
-        :param msisdn: The msisdn of this DeleteUserUpdate.  # noqa: E501
+        :param msisdn: The msisdn of this DeletedUserUpdate.  # noqa: E501
         :type msisdn: str
-        :param reason: The reason of this DeleteUserUpdate.  # noqa: E501
+        :param reason: The reason of this DeletedUserUpdate.  # noqa: E501
         :type reason: str
-        :param deleted_at: The deleted_at of this DeleteUserUpdate.  # noqa: E501
+        :param deleted_at: The deleted_at of this DeletedUserUpdate.  # noqa: E501
         :type deleted_at: datetime
-        :param deleter_id: The deleter_id of this DeleteUserUpdate.  # noqa: E501
+        :param deleter_id: The deleter_id of this DeletedUserUpdate.  # noqa: E501
         :type deleter_id: str
         """
         self.swagger_types = {
@@ -57,32 +57,32 @@ class DeleteUserUpdate(Model):
         self._deleter_id = deleter_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DeleteUserUpdate':
+    def from_dict(cls, dikt) -> 'DeletedUserUpdate':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The delete_user_update of this DeleteUserUpdate.  # noqa: E501
-        :rtype: DeleteUserUpdate
+        :return: The deleted_user_update of this DeletedUserUpdate.  # noqa: E501
+        :rtype: DeletedUserUpdate
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def username(self) -> str:
-        """Gets the username of this DeleteUserUpdate.
+        """Gets the username of this DeletedUserUpdate.
 
 
-        :return: The username of this DeleteUserUpdate.
+        :return: The username of this DeletedUserUpdate.
         :rtype: str
         """
         return self._username
 
     @username.setter
     def username(self, username: str):
-        """Sets the username of this DeleteUserUpdate.
+        """Sets the username of this DeletedUserUpdate.
 
 
-        :param username: The username of this DeleteUserUpdate.
+        :param username: The username of this DeletedUserUpdate.
         :type username: str
         """
 
@@ -90,20 +90,20 @@ class DeleteUserUpdate(Model):
 
     @property
     def email(self) -> str:
-        """Gets the email of this DeleteUserUpdate.
+        """Gets the email of this DeletedUserUpdate.
 
 
-        :return: The email of this DeleteUserUpdate.
+        :return: The email of this DeletedUserUpdate.
         :rtype: str
         """
         return self._email
 
     @email.setter
     def email(self, email: str):
-        """Sets the email of this DeleteUserUpdate.
+        """Sets the email of this DeletedUserUpdate.
 
 
-        :param email: The email of this DeleteUserUpdate.
+        :param email: The email of this DeletedUserUpdate.
         :type email: str
         """
 
@@ -111,20 +111,20 @@ class DeleteUserUpdate(Model):
 
     @property
     def msisdn(self) -> str:
-        """Gets the msisdn of this DeleteUserUpdate.
+        """Gets the msisdn of this DeletedUserUpdate.
 
 
-        :return: The msisdn of this DeleteUserUpdate.
+        :return: The msisdn of this DeletedUserUpdate.
         :rtype: str
         """
         return self._msisdn
 
     @msisdn.setter
     def msisdn(self, msisdn: str):
-        """Sets the msisdn of this DeleteUserUpdate.
+        """Sets the msisdn of this DeletedUserUpdate.
 
 
-        :param msisdn: The msisdn of this DeleteUserUpdate.
+        :param msisdn: The msisdn of this DeletedUserUpdate.
         :type msisdn: str
         """
 
@@ -132,20 +132,20 @@ class DeleteUserUpdate(Model):
 
     @property
     def reason(self) -> str:
-        """Gets the reason of this DeleteUserUpdate.
+        """Gets the reason of this DeletedUserUpdate.
 
 
-        :return: The reason of this DeleteUserUpdate.
+        :return: The reason of this DeletedUserUpdate.
         :rtype: str
         """
         return self._reason
 
     @reason.setter
     def reason(self, reason: str):
-        """Sets the reason of this DeleteUserUpdate.
+        """Sets the reason of this DeletedUserUpdate.
 
 
-        :param reason: The reason of this DeleteUserUpdate.
+        :param reason: The reason of this DeletedUserUpdate.
         :type reason: str
         """
 
@@ -153,20 +153,20 @@ class DeleteUserUpdate(Model):
 
     @property
     def deleted_at(self) -> datetime:
-        """Gets the deleted_at of this DeleteUserUpdate.
+        """Gets the deleted_at of this DeletedUserUpdate.
 
 
-        :return: The deleted_at of this DeleteUserUpdate.
+        :return: The deleted_at of this DeletedUserUpdate.
         :rtype: datetime
         """
         return self._deleted_at
 
     @deleted_at.setter
     def deleted_at(self, deleted_at: datetime):
-        """Sets the deleted_at of this DeleteUserUpdate.
+        """Sets the deleted_at of this DeletedUserUpdate.
 
 
-        :param deleted_at: The deleted_at of this DeleteUserUpdate.
+        :param deleted_at: The deleted_at of this DeletedUserUpdate.
         :type deleted_at: datetime
         """
 
@@ -174,20 +174,20 @@ class DeleteUserUpdate(Model):
 
     @property
     def deleter_id(self) -> str:
-        """Gets the deleter_id of this DeleteUserUpdate.
+        """Gets the deleter_id of this DeletedUserUpdate.
 
 
-        :return: The deleter_id of this DeleteUserUpdate.
+        :return: The deleter_id of this DeletedUserUpdate.
         :rtype: str
         """
         return self._deleter_id
 
     @deleter_id.setter
     def deleter_id(self, deleter_id: str):
-        """Sets the deleter_id of this DeleteUserUpdate.
+        """Sets the deleter_id of this DeletedUserUpdate.
 
 
-        :param deleter_id: The deleter_id of this DeleteUserUpdate.
+        :param deleter_id: The deleter_id of this DeletedUserUpdate.
         :type deleter_id: str
         """
         if deleter_id is None:
